2013-09-13  Karl Berry  <karl@gnu.org>

	* pretest 5.1.90.

2013-09-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\inlinefmtifelse, \inlineifset, \inlineifclear):
	new commands.
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi (Inline Conditionals),
	(@t{@@set @@clear @@value}),
	(@t{@@inlineifset @@inlineifclear}),
	(Command Summary): document them.

2013-09-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\onepageout): call new macro
	\commonheadfootline to make the headline/footline vboxes,
	which in turn calls \texinfochars.
	(\texinfochars): new macro; should reset all definitions done by
	@tex, but have skipped some for now out of laziness, since no
	one has noticed.
	(\expandablevalue): change formatting; note that _ in
	an @value string fails in non-typewriter output,
	and has been for a long time.
	(\activetilde, \activehat, \activeless, \activegtr): factor
	out the normal Texinfo definitions, now also used in \texinfochars.
	
	All this due to a bug report from Charlie Zender where ' in the
	@settitle caused failures when a page break occurred inside @tex,
	help-texinfo 08 Sep 2013 16:26:16.

2013-09-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Two Arguments, Three Arguments):
	some node name requirements apply to arg#2 and arg#3 too.
	(Inline Conditionals): TeX can't properly deal with
	newline-delimited commands inside @inline*.

2013-09-09  Karl Berry  <karl@gnu.org>

	* NEWS,
	* doc/texinfo.texi (Node Line Requirements, Menu Parts,
	Cross Reference Parts, Other Customization variables): 
	mention Info warnings and INFO_SPECIAL_CHARS_WARNING.
	Other small tweaks.

2013-09-07  Patrice Dumas  <pertusus@free.fr>

	* tp/texi2any.pl: handle plaintext as other formats to set 
	expanded formats.
	* tp/Texinfo/Parser.pm: accept matching braces in ignored 
	@inline* commands.
	* tp/Texinfo/Common.pm(@variable_string_settables),
	tp/Texinfo/Convert/Info.pm(_node), tp/Texinfo/Convert/Plaintext.pm: