@@ -1,3 +1,11 @@
+2013-09-19  Eli Zaretskii  <eliz@gnu.org>
+
+	* info/info-utils.c (fncmp): For MS-DOS/MS-Windows, a new function
+	for comparing file names disregarding letter-case and
+	forward/backslash differences; for Posix platforms, a macro that
+	expands into a strcmp call.
+	(info_namelist_add): Use fncmp instead of strcmp.
+
 2013-09-13  Karl Berry  <karl@gnu.org>
 
 	* pretest 5.1.90.
